Fixed navbar jumping up to the content body, added style for the project index budget.

--- a/src/CompetitionPlatform/wwwroot/css/site.css
+++ b/src/CompetitionPlatform/wwwroot/css/site.css
@@ -75,3 +75,7 @@ textarea {
 .project-details-tags {
     margin-bottom: 25px;
 }
+
+.project-index-budget {
+    margin-top: 22px;
+}
